[package]
name = "genesis"
version = "0.1.0"
edition = "2024"
authors = ["Jeff Pidcock<jeff@home.jpdck.dev>"]
description = "Embedded OTA and configuration management library for ESP32-C3"
license = "Unlicense"
repository = "https://github.com/jpdck/hsl-gensis"

[dependencies]
# Core embedded dependencies
embassy-executor = { version = "0.7.0", features = ["arch-riscv32", "executor-thread"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
embassy-net = { version = "0.7.0", features = ["tcp", "dhcpv4", "medium-ethernet"] }
embedded-hal-async = "1.0"
embedded-storage = "0.3"
embedded-storage-async = "0.4"

# ESP32-C3 specific
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-hal-embassy = { version = "0.9.0", features = ["esp32c3"] }
esp-storage = { version = "0.7.0", features = ["esp32c3"] }
esp-wifi = { version = "0.15.0", features = ["esp32c3", "wifi", "smoltcp"] }
esp-println = { version = "0.15.0", features = ["esp32c3", "log-04"] }

# Cryptography for GPG verification
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["digest"] }

# Serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", features = ["heapless"] }
heapless = { version = "0.8", features = ["serde"] }

# Logging
log = { version = "0.4", default-features = false }
defmt = { version = "1.0.1", optional = true }

# HTTP client for OTA downloads
reqwless = { version = "0.13", features = ["embedded-tls"] }
embedded-tls = { version = "0.17.0", default-features = false }

[dev-dependencies]
# Testing utilities
static_cell = "2.1"

[features]
default = ["defmt"]
defmt = ["dep:defmt", "esp-hal/defmt", "embassy-executor/defmt"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization

[profile.dev]
opt-level = 1       # Some optimization even in debug
overflow-checks = true
debug = true
debug-assertions = true